# DIC_Project_Pt2

./: .gitignore  README.md  base_agent_VI.py  dqn_grouped_means.csv  dqn_maze_model.pth  hpo_dqn_reward.csv  hpo_dqn_target.csv  hpo_ppo_reward.csv  hpo_target_seed_sweep.csv  ppo_grouped_means.csv  ppo_maze_model.pth  pyproject.toml  requirements.txt  run_dqn.py  run_ppo.py  tune_rewards.py  tuning_results.yaml
datachallenge/: agent.py  dataset.py  env_viz.py  environment.py  grid.py  grid_generator.py  main.py  plots3.py  reward.py  train.py
datachallengeg15/: MC_plots.py  ablation.py  agent.py  agents.py  config.yaml  config_dqn.yaml  dataset.py  dataset_builder_web.py  dataset_config.yaml  dqn.py  dqn_hpo.py  dqn_trainer.py  env.py  env_dqn.py  env_viz.py  environment.py  grid.py  hpo.py  main.py  main_dqn.py  mc-hpo-3.yaml  mc-hpo-TOUGH-2-tighter-bounds.yaml  plot_PPO&DQN.py  plot_VI.py  plots.ipynb  plots.py  plots2.py  ppo.py  ql-hpo.yaml  requirements.txt  reward.py  reward_dqn.py  train.py  trainer.py  tune_dqn.py  tune_dqn_config.yaml  utils.py  viz.py  warehouse.npy  库.py
results/: 2025-05-09__15-27-26.txt  2025-05-09__17-35-17.txt  2025-05-09__17-37-42.txt  2025-05-09__17-38-13.txt  2025-05-09__17-42-46.txt  2025-05-09__17-43-39.txt  2025-05-09__17-44-30.txt  2025-05-09__17-46-08.txt  2025-05-09__17-47-15.txt  2025-05-09__18-08-19.txt  2025-05-09__18-18-12.txt  MC_Tough.csv  MonteCarloAgent_A1_grid_TOUGH_reward_fn__15_23-22.csv  TabularQLearningAgent_A1_grid_TOUGH_reward_fn__15_16-14.csv  TabularQLearningAgent_A1_grid_reward_fn_12_16-53.csv  (+9 more)
(+32 files in other folders)
