[tool.poetry]
name = "datachallengeg15"
version = "0.1.0"
description = ""
authors = ["Alessandro <alessandro.preiti@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = ">1.24"
tqdm = ">4"
pygame = ">2.3"
flask = ">2.2"
flask-socketio = ">5.3"
pillow = ">9.4"
colorcet = ">3.0"
matplotlib = "^3.10.1"
pyyaml = "^6.0.2"
scipy = "^1.15.2"
networkx = "^3.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
