[tool.poetry]
name = "datachallengeg15"
version = "0.1.0"
description = ""
authors = ["Alessandro <alessandro.preiti@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = ">1.24"
tqdm = ">4"
matplotlib = "^3.10.1"
pyyaml = "^6.0.2"
pandas = "^2.2.3"
torch = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
